# Rural-Health-Care-Anomaly-Detection-System

./: .dockerignore  Dockerfile  LICENSE  README.md  anomaly_cli.py  backend_server.py  dashboard_server.py  edge_inference.py  example_training_inference.py  normalized_healthcare_schema.md  preprocessing_pipeline.py  pyproject.toml  render.yaml  streamlit_dashboard.py  train_pipeline.py  vital_signs_data_collection_parameter_design.md
artifacts/: web-demo-feature-map.csv  web-demo-model.metadata.json
docs/: architecture.md  config_examples.md  feature_provenance.md  index.md  model_details.md  project_documentation.md  project_scope.md  reference.md  research_report.md  research_report_outline.md  risk_scoring_config.example.json
rural_health_anomaly/: __init__.py  anomaly_transformer.py  autoencoder.py  backend.py  cli.py  cnn_autoencoder.py  common_interface_demo.py  config.py  deep_svdd.py  detectors.py  edge_export.py  edge_inference.py  ensemble.py  evaluation.py  example.py  feedback.py  ganomaly.py  pipeline.py  preprocessing.py  schema.py  streamlit_dashboard.py  temporal_sequence_detector.py  training.py  variational_autoencoder.py
tests/: test_backend_api.py  test_cli_entry_points.py  test_cli_training_and_artifact.py  test_dashboard_server.py  test_data_loader.py  test_edge_export.py  test_edge_inference.py  test_evaluation.py  test_example_pipeline.py  test_feature_map_exports.py  test_preprocessing_and_pipeline_builder.py  test_schema_expansion.py  test_streamlit_dashboard.py  test_web_dashboard_assets.py
web/: dashboard-data.json  index.html  (+5 more)
(+41 files in other folders)
