[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rural-health-anomaly-detection"
version = "0.1.0"
description = "Rural health anomaly detection pipeline with schema-aware preprocessing"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "joblib>=1.3",
  "numpy>=1.24",
  "pandas>=2.0",
  "onnx>=1.16",
  "onnxruntime>=1.18",
  "python-multipart>=0.0.9",
  "skl2onnx>=1.17",
  "scikit-learn>=1.4",
  "streamlit>=1.36",
  "uvicorn>=0.30",
]

[project.scripts]
anomaly-cli = "rural_health_anomaly.cli:main"
anomaly-train = "rural_health_anomaly.cli:train_main"
anomaly-predict = "rural_health_anomaly.cli:predict_main"
anomaly-dashboard = "dashboard_server:main"
anomaly-api = "rural_health_anomaly.backend:main"
anomaly-edge-export = "rural_health_anomaly.edge_export:main"
anomaly-edge-infer = "rural_health_anomaly.edge_inference:main"

[tool.setuptools]
include-package-data = true
py-modules = [
  "anomaly_cli",
  "backend_server",
  "dashboard_server",
  "edge_inference",
  "example_training_inference",
  "preprocessing_pipeline",
  "streamlit_dashboard",
  "train_pipeline",
]

[tool.setuptools.packages.find]
include = ["rural_health_anomaly*"]
